已按这个方向完成修正，现在整体流程是： MCP 完整返回结果   ├─ 原始 payload 完整保留，不修改、不切片   └─ 提取业务数据集        ↓ Driver：每个数据集分配一个 Worker        ↓ Worker：仅切分业务数据记录        ├─ 每个分片始终携带完整元数据、字段描述和分析上下文        ├─ 分片失败默认重试 3 次        ├─ 汇总所有分片，生成 DATASET_SYNTHESIS        └─ 通知 Driver 数据集计算完成        ↓ Driver：获取各 Worker 的数据集结果        └─ 只做跨数据集关系归并，不重复汇总数据集 主要实现： - MCP data 和 rawData 保持原始完整内容，分析投影只提取业务记录，并记录原始载荷 SHA-256、字符数及未修改状态。[McpResultAnalysisBridge.java (line 80)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-agents/src/main/java/com/chatchat/agents/runtime/analysis/McpResultAnalysisBridge.java:80) - MCP 镜像数据不会重复生成数据集；rawData 仅作为恢复来源。[McpAnalysisPayloadResultAnalysisAdapter.java (line 19)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-agents/src/main/java/com/chatchat/agents/runtime/analysis/McpAnalysisPayloadResultAnalysisAdapter.java:19) - Worker 返回完整的 AnalysisDatasetSummary，包含分片结果、数据集汇总结果、重试次数和检查点信息。[AnalysisDatasetSummary.java (line 24)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-agents/src/main/java/com/chatchat/agents/orchestration/analysis/AnalysisDatasetSummary.java:24) - Driver 等待 Worker 完成后获取 datasetSummary，不再直接拿分片做重复归并。[AgentOrchestrator.java (line 3714)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-agents/src/main/java/com/chatchat/agents/orchestration/AgentOrchestrator.java:3714) - 每个分片以及 Worker 的数据集汇总请求都携带完整 analysisContext。[HierarchicalAnalysisReducer.java (line 87)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-agents/src/main/java/com/chatchat/agents/orchestration/analysis/HierarchicalAnalysisReducer.java:87) - 检查点身份排除了重试次数、Worker 尝试次数和落盘位置等运行态字段，避免恢复时重复请求模型。[AgentOrchestrator.java (line 4203)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-agents/src/main/java/com/chatchat/agents/orchestration/AgentOrchestrator.java:4203) - Worker 默认重试次数为 3，可通过 CHATCHAT_AGENT_ANALYSIS_SUMMARY_WORKER_MAX_RETRIES 配置。 验证结果： - chatchat-agents 全量测试：970 个测试全部通过。 - chatchat-api 及依赖模块 test-c